# langchain-agentic-services

./: .env.example  .env.old  .flake8  .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DOCKER_SETUP_SUMMARY.md  DOCKER_UV_UPGRADE.md  ENVIRONMENT_SETUP.md  GITHUB_SETUP.md  LICENSE  POSTGRES_DEPLOYMENT.md  README.md  README_CN.md  STORAGE_CONFIG.md  api.py  docker-compose.yml  env.example  main.py  migrate_to_database.py  pyproject.toml  requirements.txt  setup_github.sh  setup_storage.sh  start_server.py  switch_env.sh
.data_backup/users/alice/sessions/s1/: chat_history.jsonl
.data_backup/users/comparison_test/sessions/session1/: chat_history.jsonl
.data_backup/users/nec01/sessions/s01/: chat_history.jsonl  last_doc_key.json
.data_backup/users/nec02/sessions/s01/: chat_history.jsonl
.data_backup/users/nec02/sessions/s02/: chat_history.jsonl
.data_backup/users/remote_user/sessions/default_session/: chat_history.jsonl
.data_backup/users/storyteller/sessions/default_session/: chat_history.jsonl
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  deploy_postgres.sh  docker-build-with-proxy.sh  docker-build.sh  docker-compose.prod.yml  docker-compose.yml  proxy.env  setup_docker.sh  setup_storage.sh
docker/postgres/init/: 01-init.sql
langchain_agent/: __init__.py  agent.py  database.py  db_service.py  enhanced_chunking.py  file_parser.py  intent_recognizer.py  language_utils.py  rag_utils.py  storage.py  storage_factory.py
simple_agent/: __init__.py  agent.py  file_parser.py  intent_recognizer.py  storage.py  storage_factory.py
(+22 files in other folders)
